Proyecto_CV_Moyano_con_/recursos(para que se vea las imagenes en el server local)

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV de Lucas Martin</title>
-    <link rel="icon" type="image/x-icon" href="Lucas_Martin_CV_Icon.png"/>
+    <link rel="icon" type="image/x-icon" href="Recursos/Lucas_Martin_CV_Icon.png"/>
     <link rel="stylesheet" type="text/css" href="css.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Vinyl&display=swap" rel="stylesheet">
     
@@ -18,7 +18,7 @@
     <!-- Div barra fija= barra izquierda (horizontal) o barra superior (vertical) -->
     <div id="Barra_Fija">
         <div id="Foto_Central">
-            <img src="Lucas_Martin_CV.jpg" alt="imagen de frente de Lucas Martin"/>
+            <img src="Recursos/Lucas_Martin_CV.jpg" alt="imagen de frente de Lucas Martin"/>
         </div>
 
         <!-- Display_Verti aparecera si la pantalla esta en vertical -->
@@ -32,10 +32,10 @@
 
         <!-- si se presionan las imagenes llevara a la respectiva pagina principal -->
         <div id="Contacto">
-            <a href="https://www.google.com/maps"><img src="Icono_casa.png"/></a> <span> 7753 Lakeview ST</span><br>
-            <a href="https://web.whatsapp.com"><img src="Telefono_what__icono.png"/></a> <span> (999) 528-6228</span><br>
-            <a href="https://mail.google.com"><img src="Email_icono.png"/></a> <span> lucas.martin@example.com</span><br>
-            <a href="https://twitter.com/?lang=es"><img src="Arroba_icon.png"/></a> <span> @Luk_Mart1 (Twitter)</span><br>
+            <a href="https://www.google.com/maps"><img src="Recursos/Icono_casa.png"/></a> <span> 7753 Lakeview ST</span><br>
+            <a href="https://web.whatsapp.com"><img src="Recursos/Telefono_what__icono.png"/></a> <span> (999) 528-6228</span><br>
+            <a href="https://mail.google.com"><img src="Recursos/Email_icono.png"/></a> <span> lucas.martin@example.com</span><br>
+            <a href="https://twitter.com/?lang=es"><img src="Recursos/Arroba_icon.png"/></a> <span> @Luk_Mart1 (Twitter)</span><br>
         </div>
 
         <hr>
